<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_recent"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/menu_recent"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star"
        android:title="@string/menu_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>
